--- a/frame/modules/bwiki/skin/pukiwiki.css.php?charset=EUC-JP.css
+++ b/frame/modules/bwiki/skin/pukiwiki.css.php?charset=EUC-JP.css
@@ -110,10 +110,10 @@ h1.title {
 }
 
 
-h1:before { content: "¢¡ "; }
-h2:before { content: "¢£ "; }
-h3:before { content: "¡ü "; }
-h4:before { content: "¢¡ "; }
+h1:before { content: "â—† "; }
+h2:before { content: "â–  "; }
+h3:before { content: "â— "; }
+h4:before { content: "â—† "; }
 
 dt {
 	font-weight:bold;
